--- a/index.mdx
+++ b/index.mdx
@@ -1,71 +1,24 @@
 ---
 title: Introduction
-description: "Welcome to the home of your new documentation"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+## What is Channel3?
+Channel3 is the API for AI Shopping.
+
+Search our product catalog of nearly every product on the web — with natural language, images, or both. Recommend products. Earn revenue when your customers buy them.
 
 ## Setting up
 
-The first step to world-class documentation is setting up your editing environments.
+Channel3 is super easy. 2 endpoints. 3 steps to set up.
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+<Card title = "Create an account" icon="1" href="https://trychannel3.com/sign-up">
+  To curate your catalog and track affiliate payouts.
+</Card>
 
-## Make it yours
+<Card title = "Get an API key" icon="2" href="https://trychannel3.com/dashboard/api">
+  Your API Key will be used to authenticate your requests to the Channel3 MCP and ensure purchases get affiliated to your account.
+</Card>
 
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+<Card title = "Start selling" icon="3">
+  Start selling in minutes with our API or MCP.
+</Card>
