--- a/overview.mdx
+++ b/overview.mdx
@@ -17,6 +17,25 @@ description: 'Add the Channel3 MCP to your agent'
 **Step 3**: Add the Channel3 MCP to your agent.
 <CodeGroup>
 
+```json Claude Config
+{
+  "mcpServers": {
+    "Channel3": {
+      "command": "npx",
+      "args": [
+        "mcp-remote",
+        "https://mcp-server.channel3.workers.dev/sse",
+	    "--header",
+	    "x-api-key: ${apiKey}"
+      ],
+      "env": {
+        "apiKey": <your-api-key>
+      }
+    }
+  }
+}
+```
+
 ```python OpenAI Agents SDK
 from openai.agents import Agent
 from agents.mcp import MCPServerStdio
@@ -30,6 +49,8 @@ async def main(message: str):
           "args": [
               "mcp-remote",
               "https://mcp-server.channel3.workers.dev/sse",
+              "--header",
+              "x-api-key: <your-api-key>"
           ],
       },
   ) as mcp_server:
@@ -61,20 +82,3 @@ asyncio.run(main("I'm looking for a new laptop"))
 
 </CodeGroup>
 
-
-## Troubleshooting
-
-<AccordionGroup>
-  <Accordion title='Error: Could not load the "sharp" module using the darwin-arm64 runtime'>
-
-    This may be due to an outdated version of node. Try the following:
-    1. Remove the currently-installed version of mintlify: `npm remove -g mintlify`
-    2. Upgrade to Node v19 or higher.
-    3. Reinstall mintlify: `npm install -g mintlify`
-  </Accordion>
-
-  <Accordion title="Issue: Encountering an unknown error">
-  
-    Solution: Go to the root of your device and delete the \~/.mintlify folder. Afterwards, run `mintlify dev` again.
-  </Accordion>
-</AccordionGroup>
