Updated SDKs and API

--- a/index.mdx
+++ b/index.mdx
@@ -2,69 +2,55 @@
 title: Introduction
 ---
 
-## Welcome to Channel3! The API for AI Shopping 🛍️🤖
+## Welcome to Channel3
 
-Hey there, developer! Welcome to Channel3, your new best friend for building amazing AI-powered shopping experiences. Whether you're creating a smart recommendation engine, a visual search tool, or an app that understands what your users *really* want, Channel3 has got you covered.
+Channel3 enables developers to build AI shopping apps and agents. Whether you're creating a smart recommendation engine, a visual search tool, or an agent that purchases products autononmously, Channel3 can power it.
 
 **What can you do with Channel3?**
--   **Search a massive catalog:** Access nearly every product on the web.
+-   **Search a Vast Catalog:** Access nearly every product on the web.
 -   **Natural Language Search:** Let users search just like they talk (e.g., "warm winter coat for hiking").
 -   **Visual Search:** Allow users to find products using an image. Got a photo of cool sneakers? Find similar ones!
 -   **Multimodal Search:** Combine text *and* images for ultra-precise queries (e.g., "blue version of this dress" + image of the dress).
 -   **Recommend Products:** Intelligently suggest items your users will love.
 -   **Earn Revenue:** Monetize when your customers make purchases.
 
-We aim to make integrating powerful e-commerce AI super simple. Let's get you started!
+Channel3 makes it easy to build AI shopping apps and agents. Let's get you started!
 
 ## Getting Started: Your First Steps
 
-Setting up with Channel3 is a breeze. Here's how you can jump in:
+Setting up with Channel3 is easy. Get started in just a few steps:
 
 <Steps>
   <Step title="Create Your Free Account">
     First things first, you'll need a Channel3 account. This is where you'll manage your API keys, track usage, and more.
     <Card title="Sign Up for Channel3" icon="user-plus" href="https://trychannel3.com/sign-up">
-      It's quick and easy!
+      Use your Google account, GitHub, or email to sign up. No credit card required - <i>we're paying you, remember?</i>
     </Card>
   </Step>
   <Step title="Grab Your API Key">
-    Your API key is your secret pass to use the Channel3 API. Keep it safe!
+    Your API key identifies you to Channel3. We use it to track the sales you drive, so you can get paid.
     <Card title="Go to API Keys in Dashboard" icon="key" href="https://trychannel3.com/dashboard/api">
-      You'll find your API key here after signing in.
+      Generate a new API key, and keep it safe.
     </Card>
     <Callout type="important">
       **Treat your API key like a password!** Don't share it publicly or embed it directly in frontend code that users can see. For browser-based apps, consider a backend proxy. For server-side apps, use environment variables.
     </Callout>
   </Step>
-  <Step title="Choose Your SDK & Start Building!">
-    We offer official SDKs to make integration smooth and easy. Pick your language and dive in!
+  <Step title="Consider Your Use-Case">
     <CardGroup cols={2}>
-      <Card title="Python SDK Quickstart" icon="code" href="/quickstart">
-        Get started with our Python SDK. Perfect for backend applications, data science, and scripting.
+      <Card title="Building an Agent?" icon="robot" href="/mcp">
+        Simply add our MCP to your agent.
       </Card>
-      <Card title="TypeScript/JS SDK Quickstart" icon="code" href="/typescript-sdk">
-        Using Node.js or building for the browser? Our TypeScript/JavaScript SDK is for you.
+      <Card title="Building an App?" icon="code" href="/typescript-sdk">
+        Explore our SDKs, or call our API directly.
       </Card>
     </CardGroup>
-    <Callout type="info">
-      **Just want to use the API directly?**
-      You can also make HTTP requests to our API endpoints. Check out the [API Reference](/api-reference/endpoint/search) for details on request/response formats. Our SDKs just make this process easier and more robust!
-    </Callout>
   </Step>
 </Steps>
 
-## Core API Concepts
+## Next Steps
 
-While our SDKs handle a lot of the complexity, it's good to know the basics:
-
--   **Search (`/search` endpoint):** This is your main workhorse. You can send:
-    -   `query`: A text string.
-    -   `image_url` or `base64_image`: For visual search.
-    -   `filters`: To narrow down results (e.g., by color, price).
-    -   `limit`: To control how many results you get.
--   **Get Product Details (`/products/{product_id}` endpoint):** Once you have a product ID from a search, use this to get more comprehensive information about it.
-
-Our SDKs provide convenient methods that wrap these endpoints, along with typed models for requests and responses, making your development experience much smoother.
+Ready to start building? Choose your path based on what you're creating.
 
 <Callout type="tip" title="Explore the Docs!">
 This introduction is just the beginning. Make sure to check out:
