change mcp from x-api-key to Bearer Auth

--- a/mcp-overview.mdx
+++ b/mcp-overview.mdx
@@ -67,11 +67,11 @@ Choose your setup method based on your preferred platform:
       "args": [
         "mcp-remote",
         "https://mcp-server.channel3.workers.dev/sse",
-	    "--header",
-	    "x-api-key: ${apiKey}"
+        "--header",
+        "Authorization: Bearer ${apiKey}"
       ],
       "env": {
-        "apiKey": <your-api-key>
+	      "apiKey": <your-api-key>
       }
     }
   }
@@ -92,7 +92,7 @@ async def main(message: str):
               "mcp-remote",
               "https://mcp-server.channel3.workers.dev/sse",
               "--header",
-              "x-api-key: <your-api-key>"
+              "Authorization: Bearer <your-api-key>"
           ],
       },
   ) as mcp_server:
